@@ -12,7 +12,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclCompCmds.c,v 1.49.2.61 2010/04/30 14:16:17 dgp Exp $
+ * RCS: @(#) $Id: tclCompCmds.c,v 1.49.2.62 2010/10/20 13:48:30 dgp Exp $
  */
 
 #include "tclInt.h"
@@ -876,7 +876,8 @@ TclCompileDictForCmd(
      */
 
     ExceptionRangeTarget(envPtr, loopRange, breakOffset);
-    TclEmitInstInt4( INST_DICT_DONE, infoIndex,			envPtr);
+    TclEmitInstInt1( INST_UNSET_SCALAR, 0,			envPtr);
+    TclEmitInt4(     infoIndex,					envPtr);
     TclEmitOpcode(   INST_END_CATCH,				envPtr);
     endTargetOffset = CurrentOffset(envPtr);
     TclEmitInstInt4( INST_JUMP4, 0,				envPtr);
@@ -889,7 +890,8 @@ TclCompileDictForCmd(
     ExceptionRangeTarget(envPtr, catchRange, catchOffset);
     TclEmitOpcode(   INST_PUSH_RETURN_OPTIONS,			envPtr);
     TclEmitOpcode(   INST_PUSH_RESULT,				envPtr);
-    TclEmitInstInt4( INST_DICT_DONE, infoIndex,			envPtr);
+    TclEmitInstInt1( INST_UNSET_SCALAR, 0,			envPtr);
+    TclEmitInt4(     infoIndex,					envPtr);
     TclEmitOpcode(   INST_END_CATCH,				envPtr);
     TclEmitOpcode(   INST_RETURN_STK,				envPtr);
 
@@ -905,7 +907,8 @@ TclCompileDictForCmd(
 	    envPtr->codeStart + emptyTargetOffset);
     TclEmitOpcode(   INST_POP,					envPtr);
     TclEmitOpcode(   INST_POP,					envPtr);
-    TclEmitInstInt4( INST_DICT_DONE, infoIndex,			envPtr);
+    TclEmitInstInt1( INST_UNSET_SCALAR, 0,			envPtr);
+    TclEmitInt4(     infoIndex,					envPtr);
 
     /*
      * Final stage of the command (normal case) is that we push an empty
